--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,20 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+	
+	
+	
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-tomcat</artifactId>  
+	</dependency>
+	<dependency>
+		<groupId>org.apache.tomcat</groupId>
+		<artifactId>tomcat-servlet-api</artifactId>
+		<version>8.5.38</version>
+		<scope>provided</scope>
+	</dependency>
+
 
     <!-- 下面两个引入为了操作数据库 -->
     <dependency>
