--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     </dependency>
 	
 	
-	<!-- 新增 -->
+	<!-- 新增依赖 -->
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-tomcat</artifactId>  
