--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
         </dependency>
+		
+	<dependency>
+　　　　　　<groupId>org.hibernate</groupId>
+　　　　　　<artifactId>hibernate-entitymanager</artifactId>
+　　　　　　<version>5.0.3.Final</version>
+　　</dependency>
 
   </dependencies>
 
