--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
   </dependencies>
 
   <build>
-    <finalName>IDEAmaven</finalName>
+    <finalName>interface_proj</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
