--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 spring.datasource.url = jdbc:mysql://localhost:3306/test
-spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.username = gloryroad
+spring.datasource.password = gloryroad
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
