--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 spring.datasource.url = jdbc:mysql://localhost:3306/test
-spring.datasource.username = gloryroad
+spring.datasource.username = root
 spring.datasource.password = gloryroad
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
