--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.username = root
-spring.datasource.password = gloryroad
+spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -10,13 +10,13 @@ spring.jpa.database = MYSQL
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
-# Naming strategy£¡
+# Naming strategyÂ£Â¡
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-#¿ª·¢Ê±½¨Òé¹Ø±Õ»º´æ
+#Â¿ÂªÂ·Â¢ÃŠÂ±Â½Â¨Ã’Ã©Â¹Ã˜Â±Ã•Â»ÂºÂ´Ã¦
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
