--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url = jdbc:mysql://localhost:3306/test
+spring.datasource.url = jdbc:mysql://172.20.10.4:3306/test
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
