--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/test
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
 spring.datasource.username = root
 spring.datasource.password = 123456
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
 # Show or not log for each sql query
