--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = LUyuying@123
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
